added cli section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
             </div>
         </div>
     </section>
+    <section class="cli">
+        <div class="container cli">
+            <img src="images/cli.png" alt="cli image"/>
+            <div class="card"></div>
+        </div>
+
+        
+    </section>
 
 </body>
 </html>
